--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,16 @@ services:
     networks:
       - my-network
 
+  service3:
+    build:
+      context: .
+      dockerfile: ./service3/Dockerfile
+    container_name: service3
+    ports:
+      - "8083:8083"
+    networks:
+      - my-network
+
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
@@ -41,25 +51,6 @@ services:
       - grafana-storage:/var/lib/grafana
     networks:
       - my-network
-
-  jmeter:
-    image: justb4/jmeter
-    container_name: jmeter
-    depends_on:
-      - service1
-      - service2
-    networks:
-      - my-network
-    volumes:
-      - ./jmeter:/testplans
-      - ./jmeter-results:/results
-    command: [
-      "-n",
-      "-t", "/testplans/testPlan.jmx",
-      "-l", "/results/result.jtl",
-      "-e",
-      "-o", "/results/report"
-    ]
 
 volumes:
   grafana-storage:
