--- a/prometheus.yml
+++ b/prometheus.yml
@@ -12,3 +12,8 @@ scrape_configs:
     metrics_path: "/actuator/prometheus"
     static_configs:
       - targets: ['service2:8082']
+
+  - job_name: 'service3'
+    metrics_path: "/actuator/prometheus"
+    static_configs:
+      - targets: ['service3:8083']
